--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,13 @@ body{
 .navbar-dark {
      background-color: #512DA8;
 }
+
+.reserveCol{
+    background : rgb(239, 152, 40);
+}
+
+.fontblack
+{
+    color: #0f0f0f;
+}
+.border-p { border: 1px solid #a4a4a4; }
