--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,9 @@ body{
     color: #0f0f0f;
 }
 .border-p { border: 1px solid #a4a4a4; }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
